--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 html{
-  background-color: #E4E9FD;
-  background-image: -webkit-linear-gradient(180deg, #A683E3 50%, #E4E9FD 50%);
+  background-color: #e4fdfc;
+  background-image: -webkit-linear-gradient(180deg, #b1e4e1 50%, #e4fdfc 50%);
   min-height: 1000px;
   font-family: "helvetica neue"
 }
@@ -19,7 +19,7 @@ h1{
 }
 
 #heading{
-  background-color: #A683E3;
+  background-color: #b1e4e1;
   text-align: center;
 }
 
@@ -36,7 +36,7 @@ h1{
 
 input:checked+p{
   text-decoration: line-through;
-  text-decoration-color: #A683E3;
+  text-decoration-color: #b1e4e1;
 }
 
 input[type="checkbox"]{
@@ -61,7 +61,7 @@ button{
   width: 50px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #A683E3;
+  background-color: #b1e4e1;
   color: #fff;
   font-size: 30px;
   border-width: 0;
@@ -80,7 +80,7 @@ input[type="text"]{
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 #b1e4e1;
 }
 
 ::placeholder{
@@ -89,7 +89,11 @@ input[type="text"]:focus {
 }
 
 footer{
-  color: white;
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(61, 61, 61, 0.6);
   text-align: center;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
 }
